tests/paczka1/fuzzy1/43745886.err
Error in line 4: TNrACDokg A605 91,27
Error in line 3: cUQ5odx9ryZ A605 77,7
Error in line 10: A5q8L S500 76,2
Error in line 7: m7lrtLCSIY S500 0,8
Error in line 20: cUQ5odx9ryZ A594 61,6
Error in line 29: cU5odx9ryZ A605 90,8
Error in line 21: A5q8L A269 50,9
Error in line 33: A5q8L A594 14,4
